Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
   <body>
     <main id="main">My ID is "main"!</main>
+<p id='yellow'>Should be yellow when I click on you</p>
 
+<button id='plus'>Click me!!</button>
     <br />
 
     <div>
